# RAG-Medical-Chatbot

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  pyproject.toml  requirements.txt
app/: application.py
app/common/: custom_exception.py  logger.py
app/components/: data_loader.py  embedding.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: config.py
app/templates/: index.html
custom_jenkins/: Dockerfile
notebooks/: test_pdf_loader.ipynb
rag_medical_chatbot.egg-info/: PKG-INFO  SOURCES.txt
